# CLI-monorepo

./: .env.example  BACKLOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  release-plz.toml
.claude/skills/add-cli-command/: SKILL.md
.claude/skills/new-cli-crate/: SKILL.md
.claude/skills/new-cli-crate/scripts/: new-crate.sh
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release-plz.yml  release-pr.yml  release-tag.yml  release.yml
crates/atlassian-admin/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/atlassian-admin/.claude/skills/add-atlassian-admin-command/: ADDENDUM.md
crates/atlassian-admin/src/: auth.rs  cli.rs  client.rs  context.rs  endpoints.rs  error.rs  main.rs
crates/atlassian-admin/src/commands/: doctor.rs  init.rs  mod.rs  user.rs
crates/atlassian-admin/src/tests/: auth_tests.rs  cli_tests.rs  context_tests.rs
crates/atlassian-admin/src/tests/commands/: init_tests.rs
crates/bitbucket/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/bitbucket/.claude/skills/add-bitbucket-command/: ADDENDUM.md  SKILL.md
crates/bitbucket/src/: auth.rs  auth_tests.rs  cli.rs  cli_tests.rs  client.rs  context.rs  e2e_tests.rs  endpoints.rs  error.rs  main.rs
crates/bitbucket/src/commands/: auth.rs  branch.rs  doctor.rs  doctor_tests.rs  init.rs  init_tests.rs  mod.rs  pr.rs  pr_tests.rs  repo.rs  repo_tests.rs
crates/bitbucket/src/tests/: auth_tests.rs  cli_tests.rs  context_tests.rs  fields_tests.rs
crates/cli-fields/: Cargo.toml
crates/cli-fields/src/: fields.rs  lib.rs  select.rs
crates/cli-fields/src/tests/: fields_tests.rs  select_tests.rs
crates/google-chat/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/google-chat/.claude/skills/add-google-chat-command/: ADDENDUM.md
crates/google-chat/src/: auth.rs  cli.rs  client.rs  context.rs  endpoints.rs  error.rs  events_client.rs  fields.rs  main.rs  people_client.rs
crates/google-chat/src/commands/: auth.rs  doctor.rs  init.rs  listen.rs  messages.rs  mod.rs  spaces.rs  subscription.rs  users.rs
crates/google-chat/src/tests/: auth_tests.rs  cli_tests.rs  client_tests.rs  context_tests.rs  e2e_tests.rs  events_client_tests.rs  people_client_tests.rs
crates/google-chat/src/tests/commands/: init_tests.rs  spaces_tests.rs  subscription_tests.rs
crates/jira/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/jira/.claude/skills/add-jira-command/: ADDENDUM.md  SKILL.md
crates/jira/docs/: oauth-scopes-vs-permissions.md
crates/jira/src/: auth.rs  auth_tests.rs  cli.rs  cli_tests.rs  client.rs  config.rs  context.rs  doctor.rs  e2e_tests.rs  endpoints.rs  error.rs  fields.rs  fields_tests.rs  init.rs  issue.rs  main.rs
crates/jira/src/commands/: auth.rs  doctor.rs  init.rs  issue.rs  mod.rs
crates/jira/src/tests/: auth_tests.rs  cli_tests.rs  context_tests.rs  e2e_tests.rs
crates/jira/src/tests/commands/: init_tests.rs  issue_tests.rs
scripts/: install.sh  new-crate.sh
