[package]
name = "bitbucket"
version = "0.2.0"
edition = "2024"
publish = false

[package.metadata.release]
pre-release-hook = ["bash", "-c", "git-cliff --config \"$WORKSPACE_ROOT/cliff.toml\" --repository \"$WORKSPACE_ROOT\" --tag-pattern \"^${CRATE_NAME}-v.*\" --include-path \"crates/${CRATE_NAME}/**\" --tag \"${CRATE_NAME}-v${NEW_VERSION}\" --unreleased --prepend \"$WORKSPACE_ROOT/crates/${CRATE_NAME}/CHANGELOG.md\""]

[lints]
workspace = true

[dependencies]
cli-fields = { path = "../cli-fields" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
