[package]
name = "google-chat"
version = "0.5.0"
edition = "2024"
publish = false

[package.metadata.release]
pre-release-hook = ["bash", "-c", "git-cliff --config \"$WORKSPACE_ROOT/cliff.toml\" --repository \"$WORKSPACE_ROOT\" --tag-pattern \"^${CRATE_NAME}-v.*\" --include-path \"crates/${CRATE_NAME}/**\" --tag \"${CRATE_NAME}-v${NEW_VERSION}\" --unreleased --prepend \"$WORKSPACE_ROOT/crates/${CRATE_NAME}/CHANGELOG.md\""]

[lints]
workspace = true

[dependencies]
cli-fields = { path = "../cli-fields" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
webbrowser = "1"
dirs = "5"
serde_urlencoded = "0.7"
thiserror = "1"
jsonwebtoken = "9"
google-cloud-pubsub = "1.1.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
google-cloud-auth = { version = "1.13.0", default-features = false }
http = "1.4.2"

[dev-dependencies]
tempfile = "3"
