[package]
name = "jira"
version = "0.2.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
cli-fields = { path = "../cli-fields" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
webbrowser = "1"
dirs = "5"
serde_urlencoded = "0.7"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
